metabase/template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
spec:
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
        - name: metabase
          image: 11112003/crm-metabase:master
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: metabase-data
              mountPath: /metabase.db
      volumes:
        - name: metabase-data
          persistentVolumeClaim:
            claimName: metabase
---
apiVersion: v1
kind: Service
metadata:
  name: metabase
spec:
  selector:
    app: metabase
  ports:
    - port: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabase
  labels:
    name: metabase
  annotations:
    cert-manager.io/issuer: "crm-issuer"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - metabase.relationc.com
      secretName: metabase-ssl
  rules:
    - host: metabase.relationc.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: metabase
                port:
                  number: 3000
